Updated project - Added manifest.json and images

--- a/index.html
+++ b/index.html
@@ -7,9 +7,15 @@
         <title>To-do List</title>
         <link rel="stylesheet" href="style.css">
         <script src="script.js" defer></script>
+        <link rel="manifest" href="manifest.json">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+        <meta name="apple-mobile-web-app-title" content="My PWA App">
+        <link rel="apple-touch-icon" href="/icon-192.png">
+        
     </head>
     <header>
         <h1>To-do List</h1>
